formatted footer, but it is not centered

--- a/index.html
+++ b/index.html
@@ -15,18 +15,20 @@
   </ul>
 
   <!-- Center -->
-  <div="center">
-    <p><img src="https://lifeofajamaican.files.wordpress.com/2016/01/google-logo.jpg?w=457&h=313&crop=1" alt="Google Logo" /></p>
+  <div class="center">
+    <p><img src="http://www.underconsideration.com/brandnew/archives/google_2015_logo_detail.png" alt="Google Logo" /></p>
     <p><input type="text"></p>
   </div>
   <!-- Bottom Navbar -->
-  <ul>
-    <li>Advertising</li>
-    <li>Business</li>
-    <li>About</li>
-    <li>Privacy</li>
-    <li>Terms</li>
-    <li>Settings</li>
-  </ul>
+  <div class = "footer">
+    <ul>
+      <li class="left">Advertising</li>
+      <li class="left">Business</li>
+      <li class="left">About</li>
+      <li class="right">Privacy</li>
+      <li class="right">Terms</li>
+      <li class="right">Settings</li>
+    </ul>
+  </div>
 </body>
 </html>
