--- a/index.html
+++ b/index.html
@@ -17,8 +17,15 @@
   <!-- Center -->
   <div class="center">
     <p><img src="http://www.underconsideration.com/brandnew/archives/google_2015_logo_detail.png" alt="Google Logo" /></p>
-    <p><input type="text"></p>
-  </div>
+    <form>
+      <input type="search" /><!-- search box with microphone at the end -->
+        <ul><!-- These will be buttons so css for other 'LI's' will be different -->
+          <li><button type="button">Google Search</button></li>
+          <li><button type="button">I'm Feeling Lucky</button></li>
+        </ul>
+      </form>
+    </div>
+
   <!-- Bottom Navbar -->
   <div class = "footer">
     <ul>
