Created all buttons

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <li>Gmail</li>
     <li>Images</li>
     <li><img src="http://image.flaticon.com/icons/png/512/54/54404.png" alt="9 Squares" /></li>
-    <li>Sign in</li>
+    <li><button type="button">Sign in</button></li>
   </ul>
 
   <!-- Center -->
