added the menu image and added a styles folder

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Google</title>
-  <link href="style.css" type="text/css" rel="stylesheet">
+  <link href="styles/style.css" type="text/css" rel="stylesheet">
 </head>
 
 <body>
@@ -10,7 +10,7 @@
   <ul id="top_bar">
     <li>Gmail</li>
     <li>Images</li>
-    <li><img src="http://image.flaticon.com/icons/png/512/54/54404.png" alt="9 Squares" /></li>
+    <li><img src="images/options.png" alt="9 Squares" /></li>
     <li><button type="button">Sign in</button></li>
   </ul>
 
@@ -28,13 +28,15 @@
 
   <!-- Bottom Navbar -->
   <div class = "footer">
-    <ul>
-      <li class="left">Advertising</li>
-      <li class="left">Business</li>
-      <li class="left">About</li>
-      <li class="right">Privacy</li>
-      <li class="right">Terms</li>
-      <li class="right">Settings</li>
+    <ul id="left">
+      <li>Advertising</li>
+      <li>Business</li>
+      <li>About</li>
+    </ul>
+    <ul id="right">
+      <li>Privacy</li>
+      <li>Terms</li>
+      <li>Settings</li>
     </ul>
   </div>
 </body>
