--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <title>Google</title>
   <link href="styles/style.css" type="text/css" rel="stylesheet">
+  <link href="https://www.google.com/images/branding/product/ico/googleg_lodp.ico" rel="shortcut icon">
 </head>
 
 <body>
