made local version of google logo

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
   <!-- Center -->
   <div class="center">
-    <p><img src="http://www.underconsideration.com/brandnew/archives/google_2015_logo_detail.png" alt="Google Logo" /></p>
+    <p><img src="images/logo.png" alt="Google Logo" /></p>
     <form>
       <input type="search" /><!-- search box with microphone at the end -->
         <ul><!-- These will be buttons so css for other 'LI's' will be different -->
