changed id's to classes

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <body>
   <!-- Top Navbar -->
-  <ul id="top_bar">
+  <ul class="top_bar">
     <li>Gmail</li>
     <li>Images</li>
     <li><img src="images/options.png" alt="9 Squares" /></li>
@@ -29,12 +29,12 @@
 
   <!-- Bottom Navbar -->
   <div class = "footer">
-    <ul id="left">
+    <ul class="left">
       <li>Advertising</li>
       <li>Business</li>
       <li>About</li>
     </ul>
-    <ul id="right">
+    <ul class="right">
       <li>Privacy</li>
       <li>Terms</li>
       <li>Settings</li>
