--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <title>Google</title>
   <link href="styles/style.css" type="text/css" rel="stylesheet">
-  <link href="images/logo.png" rel="shortcut icon">
+  <link href="https://www.google.com/images/branding/product/ico/googleg_lodp.ico" rel="shortcut icon">
 </head>
 
 <body>
@@ -17,7 +17,7 @@
 
   <!-- Center -->
   <div class="center">
-    <p><img src="http://www.underconsideration.com/brandnew/archives/google_2015_logo_detail.png" alt="Google Logo" /></p>
+    <p><img src="images/logo.png" alt="Google Logo" /></p>
     <form>
       <input type="search" /><!-- search box with microphone at the end -->
         <ul><!-- These will be buttons so css for other 'LI's' will be different -->
